# Lite-SDK2

./: .gitignore  LICENSE  README.md  install_cyclonedds.sh  pyproject.toml
idl/: README.md
idl/lite_sdk2/msg/: ActuatorCommand.idl  ActuatorState.idl  ImuState.idl  LowCommand.idl  LowState.idl
lite_sdk2/: __init__.py  channel.py  helpers.py  topics.py
lite_sdk2/control/: __init__.py  cli.py
lite_sdk2/monitor/: __init__.py  cli.py
python/: pyproject.toml
python/examples/simple/: publisher.py  subscriber.py  user_data.py
python/lite_sdk2/: __init__.py  channel.py  topics.py
python/lite_sdk2/control/: __init__.py  cli.py
python/lite_sdk2/messages/: __init__.py  actuator_command.py  actuator_state.py  configuration.py  imu_state.py  low_command.py  low_state.py
python/lite_sdk2/monitor/: __init__.py  cli.py
python/tests/: test_channel.py  test_codecs.py  test_control.py  test_crosslang.py  test_monitor.py  test_wire_fixture.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: responder.rs
rust/native/: descriptors.c
rust/src/: cdr.rs  channel.rs  ffi.rs  lib.rs  messages.rs  topics.rs
rust/tests/: wire_compat.rs
rust/tests/data/: low_command.cdr
scripts/: action_observation.py  refresh_fixtures.py
tests/: test_channel.py  test_roundtrip.py
