[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lite_sdk2"
version = "2.0.0"
description = "CycloneDDS SDK for Berkeley Humanoid Lite — speaks bar_msgs over DDS (no rclpy)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "cyclonedds>=0.10",
    "loop-rate-limiters>=1.2.0",
    "bar_msgs_dds @ git+https://github.com/T-K-233/bar_ros2.git#subdirectory=bar_msgs_dds",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
lite-sdk2-monitor = "lite_sdk2.monitor.cli:main"
lite-sdk2-control = "lite_sdk2.control.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lite_sdk2"]

# The bar_msgs_dds dependency is a direct (git/path) reference; hatchling
# requires this opt-in to allow it in project.dependencies.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "F", "UP", "B", "SIM"]
