[package]
name = "lite_sdk2"
version = "1.0.0"
edition = "2026"
rust-version = "1.75"
description = "Rust bindings for Berkeley Humanoid Lite SDK2 DDS messages."
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = ["transport"]
# Enables the CycloneDDS-backed Publisher/Subscriber. Requires the CycloneDDS
# C library (ddsc) to be installed on the build host. Disable to get only the
# pure-Rust message types + CDR codec.
transport = []

[[example]]
name = "responder"
path = "examples/responder.rs"
required-features = ["transport"]

[dev-dependencies]
ctrlc = "3.4"
